@@ -4,6 +4,7 @@
 * Litle: Void authorizations via an auth reversal [jrust]
 * Add RBK Money integration [england]
 * Direcpay: Update test url [ashish-d]
+* PayPal Express gateway: Add support for creating billing agreements [fabiokr]
 
 == Version 1.32.1 (April 4, 2013)
 
